[package]
name = "puppy"
version = "0.0.3"
authors = ["Kat Spiers <kathryn@spiers.me>"]
description = "fortune but good tweets"
edition = "2018"
readme = "README.md"
repository = "https://github.com/eiais/puppy.rs"
license = "MIT"
keywords = ["trans", "fortune"]
categories = ["command-line-utilities"]

[dependencies]
rand = "0.7.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.17"
